--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-navbar></app-navbar>
+  <div class="container">
+    <app-view></app-view>
+  </div>
 </body>
 </html>
